--- a/configs/client/burp.conf.in
+++ b/configs/client/burp.conf.in
@@ -1,13 +1,12 @@
 # This is an example config file for the @name@ client.
 
 mode = client
-port = 4971
-# A different port to use for restores - see the man page for more options.
-#port_restore = 5971
+server = @server_address@:4971
 status_port = 4972
-server = @server_address@
 password = abcdefgh
 cname = testclient
+# A different port to use for restores - see the man page for more options.
+#port_restore = 5971
 # Choose the protocol to use.
 # 0 to decide automatically, 1 to force protocol1 mode (file level granularity
 # with a pseudo mirrored storage on the server and optional rsync). 2 forces
