--- a/manpages/burp.8.in
+++ b/manpages/burp.8.in
@@ -425,6 +425,9 @@ The same as notify_success_script, but for backups that failed.
 \fBnotify_failure_arg=[string]\fR
 The same as notify_success_arg, but for backups that failed.
 .TP
+\fBnotify_failure_on_backup_with_failovers_left=[0|1]\fR
+In the case where there are server_failover entries left to try, you may not wish to notify on backup failure. The default is on.
+.TP
 \fBdedup_group=[string]\fR
 Enables you to group clients together for file deduplication purposes. For example, you might want to set 'dedup_group=xp' for each Windows XP client, and then run the bedup program on a cron job every other day with the option '\-g xp'.
 .TP
@@ -503,28 +506,34 @@ Read additional configuration files. On Windows, the glob is unimplemented - you
 \fBmode=client\fR
 Required to run in client mode.
 .TP
-\fBserver=[IP address or hostname]\fR
-Defines the server to connect to.
+\fBserver=[host:port]\fR
+Defines the server to connect to. If you don't specify a port here, you will need to specify it separately.
 .TP
-\fBport=[port number]\fR
+\fBserver_failover=[host:port]\fR
+Defines a failover server to connect to. You can provide more than one 'server_failover' entry. The client will try the next failover server if it fails to connect. IMPORTANT: The burp client currently does not have the capability to have a different SSL profile for each server, so for this to work for you, you will need to have the same CA and certificates on each server.
+.TP
+\fBfailover_on_backup_error=[0|1]\fR
+Failover to failover servers on backup errors as well as failures to connect. The default is off.
+.TP
+\fBport=[port]\fR
 Defines the TCP port on the server that we will send requests to. If this option is set, it is the default for these options, which can be overridden individually: port_backup, port_restore, port_verify, port_list, port_delete. If this option is not set, you will need to set all of the port options separately.
 .TP
-\fBport_backup=[port number]\fR
+\fBport_backup=[port]\fR
 Defines the TCP port on the server that we will send backup requests to. If not set, it defaults to the port option.
 .TP
-\fBport_restore=[port number]\fR
+\fBport_restore=[port]\fR
 Defines the TCP port on the server that we will send restore requests to. If not set, it defaults to the port option.
 .TP
-\fBport_verify=[port number]\fR
+\fBport_verify=[port]\fR
 Defines the TCP port on the server that we will send verify requests to. If not set, it defaults to the port_restore option.
 .TP
-\fBport_list=[port number]\fR
+\fBport_list=[port]\fR
 Defines the TCP port on the server that we will send list requests to. If not set, it defaults to the port option.
 .TP
-\fBport_delete=[port number]\fR
+\fBport_delete=[port]\fR
 Defines the TCP port on the server that we will send delete requests to. If not set, it defaults to the port option.
 .TP
-\fBstatus_port=[port number]\fR
+\fBstatus_port=[port]\fR
 Defines the TCP port that the server is listening on for status requests.
 .TP
 \fBcname=[client name]\fR
@@ -813,6 +822,7 @@ Additionally, the following options can be overridden here for each client:
 \fBnotify_success_warnings_only\fR
 \fBnotify_failure_script\fR
 \fBnotify_failure_arg\fR
+\fBnotify_failure_on_backup_with_failovers_left\fR
 \fBdedup_group\fR
 \fBserver_script_pre\fR
 \fBserver_script_pre_arg\fR
