815: .nobackup/.exclude does not stop the directory itself from being in the backup, only the contents.
Change-Id: I6b67894462ed7a1ade053bf4993c3aebc93e79a8

--- a/manpages/burp.8.in
+++ b/manpages/burp.8.in
@@ -746,7 +746,7 @@ Allow backups to cross a particular filesystem mountpoint.
 Allow backups to cross all filesystem mountpoints.
 .TP
 \fBnobackup=[file name]\fR
-If this file system entry exists, the directory containing it will not be backed up.
+If this file system entry exists, the content of the directory containing it will not be backed up.
 .TP
 \fBread_fifo=[path]\fR
 Do not back up the given fifo itself, but open it for reading and back up the contents as if it were a regular file.
