Implement support of keeping readall capabilities after UID/GID switch
This allows to run burp client without full root write access increasing
confidence in regular unattended backups as security hardening feature.

Extend chuser_and_or_chgrp() function interface to accept 3rd parameter
specifying whether process should keep capabilities required to read and
search files and directories regardless of their access permissions.

While the change itself is portable, the implementation is Linux
specific, it uses libcap to keep CAP_DAC_READ_SEARCH capability.
If libcap is not available, or OS does not have sys/prctl.h,
sys/capability.h, prctl(2), setreuid(2) and PR_SET_KEEPCAPS, then
this change is almost noop.

This is port of 2009-th bacula commit dfd9567c ("Implement support of keeping
readall capabilities after UID/GID switch") from Dmitry V. Levin
<ldv@altlinux.org>.

--- a/Makefile.am
+++ b/Makefile.am
@@ -118,7 +118,8 @@ main_LDADD = \
 	$(NCURSES_LIBS) \
 	$(OPENSSL_LIBS) \
 	$(RSYNC_LIBS) \
-	$(ZLIBS)
+	$(ZLIBS) \
+	$(CAP_LIBS)
 
 main_CPPFLAGS = \
 	$(AM_CPPFLAGS) \
@@ -399,7 +400,8 @@ runner_LDADD = \
 	$(NCURSES_LIBS) \
 	$(RSYNC_LIBS) \
 	$(OPENSSL_LIBS) \
-	$(ZLIBS)
+	$(ZLIBS) \
+	$(CAP_LIBS)
 
 coverage: check
 if WITH_COVERAGE
