Implement support of keeping readall capabilities after UID/GID switch (#836)
This allows to run burp client without full root write access increasing
confidence in regular unattended backups as security hardening feature.

Extend chuser_and_or_chgrp() function interface to accept 3rd parameter
specifying whether process should keep capabilities required to read and
search files and directories regardless of their access permissions.

While the change itself is portable, the implementation is Linux
specific, it uses libcap to keep CAP_DAC_READ_SEARCH capability.
If libcap is not available, or OS does not have sys/prctl.h,
sys/capability.h, prctl(2), setreuid(2) and PR_SET_KEEPCAPS, then
this change is almost noop.

This is port of 2009-th bacula commit dfd9567c ("Implement support of keeping
readall capabilities after UID/GID switch") from Dmitry V. Levin
<ldv@altlinux.org>.

--- a/manpages/burp.8.in
+++ b/manpages/burp.8.in
@@ -333,6 +333,9 @@ Run as a particular user. This can be overridden by the client configuration fil
 \fBgroup=[groupname]\fR
 Run as a particular group. This can be overridden by the client configuration files in clientconfdir on the server.
 .TP
+\fBreadall=[0|1]\fR
+Keep readall capability when dropping root privileges (default 0). When enabled changes default atime to 1.
+.TP
 \fBumask=[umask]\fR
 Set the file creation umask. Default is 0022.
 .TP
