--- a/manpages/burp.8.in
+++ b/manpages/burp.8.in
@@ -413,6 +413,9 @@ Verify and authenticate client certificates at SSL layer before receiving or sen
 \fBssl_dhfile=[path]\fR
 Path to Diffie-Hellman parameter file. To generate one with openssl, use a command like this: openssl dhparam \-dsaparam \-out dhfile.pem 2048
 .TP
+\fBmax_parallel_backups=[number]\fR
+Defines the number of max parallel backups (the number of clients that in working state). The default is 0 - unlimited.
+.TP
 \fBmax_children=[number]\fR
 Defines the number of child processes to fork (the number of clients that can simultaneously connect. The default is 5. Specify multiple 'max_children' entries on separate lines if you have configured multiple 'listen' entries.
 .TP
