--- a/manpages/burp.8.in
+++ b/manpages/burp.8.in
@@ -950,6 +950,10 @@ Sending signal 1 (HUP) to the main server process will cause it to reload. For t
 4: could not connect to server
 .br
 5: max parallel backups reached
+.br
+6: another instance is already running
+.br
+7: finalising previous backup
 
 .SH BUGS
 If you find bugs, please report them to the email list. See the website
